# advent-of-code-2021

./: .env  .gitignore  Cargo.toml  LICENSE  README.md  d12-example.dot  justfile
.github/workflows/: rust.yml
day1/: Cargo.toml
day1/src/: part1.rs  part2.rs
day10/: Cargo.toml
day10/src/: part1.rs  part2.rs
day11/: Cargo.toml
day11/src/: part1.rs  part2.rs
day12/: Cargo.toml  file
day12/src/: part1.rs  part2.rs
day13/: Cargo.toml
day13/src/: part1.rs  part2.rs
day14/: .gitignore  Cargo.toml
day14/src/: part1-recursive.rs  part1.rs  part2-abandoned.rs  part2.rs
day15/: Cargo.toml
day15/src/: part1.rs  part2.rs
day2/src/: main.rs
day25/: Cargo.toml
day25/src/: part1.rs  part2.rs
day3/: Cargo.toml
day3/src/: part1.rs  part2.rs
day4/: Cargo.toml
day4/src/: part1.rs  part2.rs
day5/: Cargo.toml
day5/src/: part1.rs  part2.rs
day6/: test
day6/src/: main.rs
day7/: Cargo.toml
day7/src/: part1.rs  part2.rs
day8/: Cargo.toml
day8/src/: part1.rs  part2.rs
day9/: Cargo.toml
day9/src/: part1.rs  part2.rs
scratch/: d12-example-med.dot
src/: answer.rs  d1.rs  d10.rs  d11.rs  d12.rs  d13.rs  d14.rs  d15.rs  d16.rs  d17.rs  d18.rs  d19.rs  d2.rs  d20.rs  d21.rs  d22.rs  d23.rs  d24.rs  d25.rs  d3.rs  d4.rs  d5.rs  d6.rs  d7.rs  d8.rs  d9.rs  lib.rs  main.rs
templates/: d.rs
